CruiseControl Release Notes - Latest CVS

Multiple Classes
---------------------
added support to run multiple projects in one instance of CruiseControl. Each project is on its own schedule and only one project will build at a time.

DefaultLabelIncrementer & CVSLabelIncrementer
----------------------
* Added preBuildIncrementer attribute. - Patch by Brett Wooldridge

HTMLEmailPublisher
----------------------
* Added charset attribute.

Schedule
----------------------
* Fixed a bug where a time builder wouldn't run if the time of the last build on the previous day was later than the time of the time builder. - Patch by Jeffrey Fredrick

NavigationTag
----------------------
* Fixed bug to allow "L" in build label - Patch by Christopher Lenz

CruiseControl Release Notes - 2.0.2

JMX/PROJECT CONTROLLER
----------------------
* Added ability to force a rebuild via ProjectController (and effectivly JMX) Patch by Dominick Bellizzi. An implementation note. If project is in state "PAUSED" it won't force the build until you command "RESUME", but then it will emediatly start building.


PROJECT
----------------------
* Added ability to choose whether CruiseControl should continue to build after failure. Set in config via <project buildafterfailed="true/false">. Default is current behaviour, which is true. Patch by Dominick Bellizzi

JSP
----------------------
* XSL modified to render compile errors/warnings correctly on Netscape 4.7 - Patch by Sanjay Madhaven

EmailPublisher
----------------------
* Allow optional subject line prefix on emails for easier filtering - Patch by Peter Mei
* Added 'skipUsers' attribute to skip sending email to users who have checked in code - Patch by Jeffrey Fredrick
* Added optional 'returnName' attribute that pairs w/fromAddress - Patch by Gunnar Wagenknecht

Manifest
----------------------
* Added missing ant.jar, optional.jar, and xalan.jar manifest classpath entries - Bug found by Brett Watson

Ant
----------------------